tests/paczka1/fuzzy1/71314708.err
Error in line 3: iobEtnn A412 48,8
Error in line 6: MvZ0a86U A412 28,6
Error in line 12: MvZ0a86U S720 29,8
Error in line 15: S419 S419 17,9
Error in line 28: 0iXiFW S419 21,6
Error in line 35: Xs8dDk9XlKT A412 30,22
Error in line 34: Xs8dDk9XlKT A412 32,5
